--- a/index.html
+++ b/index.html
@@ -14,100 +14,115 @@
   </head>
   <body>
     <header class="site-header">
-      <a href="/">
-        <img class="logo" src="/assets/fungi-finders.svg" alt="Fungi Finders" />
-      </a>
-      <nav class="primary-navigation">
-        <ul>
-          <li><a href="/">Discover</a></li>
-          <li><a href="#">Mushroom guide</a></li>
-          <li><a href="#">FAQ</a></li>
-        </ul>
-      </nav>
+      <div class="wrapper" data-width="wide">
+        <a href="/">
+          <img
+            class="logo"
+            src="/assets/fungi-finders.svg"
+            alt="Fungi Finders"
+          />
+        </a>
+        <nav class="primary-navigation">
+          <ul>
+            <li><a href="/">Discover</a></li>
+            <li><a href="#">Mushroom guide</a></li>
+            <li><a href="#">FAQ</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <main>
       <section class="hero">
-        <h1>Discover the World of Mushroom Foraging</h1>
-        <p>
-          Mushroom foraging is the art and science of identifying and collecting
-          wild mushrooms.
-        </p>
-        <p>
-          It's a practice that combines outdoor exploration botanical knowledge,
-          and culinary adventure. Foragers venture into forests, fields, and
-          even urban green spaces to discover these hidden treasures.
-        </p>
-        <p>
-          But beware – this hobby requires careful study and respect for nature,
-          as some mushrooms can be dangerous if misidentified.
-        </p>
+        <div class="wrapper">
+          <h1>Discover the World of Mushroom Foraging</h1>
+        </div>
+        <div class="wrapper" data-width="narrow">
+          <p>
+            Mushroom foraging is the art and science of identifying and
+            collecting wild mushrooms.
+          </p>
+          <p>
+            It's a practice that combines outdoor exploration botanical
+            knowledge, and culinary adventure. Foragers venture into forests,
+            fields, and even urban green spaces to discover these hidden
+            treasures.
+          </p>
+          <p>
+            But beware – this hobby requires careful study and respect for
+            nature, as some mushrooms can be dangerous if misidentified.
+          </p>
+        </div>
       </section>
       <section class="main">
-        <h2>The joys of mushroom foraging</h2>
-        <p>
-          Foraging for mushrooms can be a rewarding experience for many reasons.
-          People may venture off into the woods to forage for mushrooms because
-          it allows them to connect with nature, enjoy the thrill of the hunt,
-          and savor the satisfaction of finding a hidden culinary treasure.
-        </p>
-        <div class="card">
-          <img
-            src="assets/outdoor-exploration.webp"
-            alt="tightly grouped brown mushrooms growing up a tree"
-          />
-          <h3>Outdoor exploration</h3>
-          <p class="summary">
-            Mushroom foraging takes you off the beaten path and into the heart
-            of nature. Learn to read the landscape, identifying prime mushroom
-            habitats from lush forest floors to sun-dappled meadows. Every
-            expedition is a new adventure, with the potential for exciting
-            discoveries around every tree and under every log.
-          </p>
-        </div>
-        <div class="card">
-          <img
-            src="assets/botanical-expertise.webp"
-            alt="variety of mushrooms on a table"
-            class="section-hero"
-          />
-          <h3>Botanical Expertise</h3>
-          <p class="summary">
-            Dive into the intricate world of fungal biology. Discover the unique
-            structures of mushrooms, from caps to gills to spores. Learn to use
-            field guides and identification keys to distinguish between species.
-            With practice, you'll start to see the forest in a whole new light,
-            recognizing the vital role fungi play in ecosystem health.
-          </p>
-        </div>
-        <div class="card">
-          <img
-            src="assets/culinary-delight.webp"
-            alt="plate of food with mushrooms"
-            class="section-hero"
-          />
-          <h3>Culinary Delights</h3>
-          <p class="summary">
-            Transform your foraged finds into delectable dishes. Many edible
-            mushrooms offer unique flavors and textures that can elevate your
-            cooking. From the earthy porcini to the delicate chanterelle, each
-            variety brings its own character to the table. Explore recipes,
-            preservation techniques, and the joy of cooking with nature's
-            bounty.
-          </p>
-        </div>
-        <aside>
-          <h2>Start your <span>Foraging Adventure!</span></h2>
+        <div class="wrapper">
+          <h2>The joys of mushroom foraging</h2>
           <p>
-            Whether you're seeking a deeper connection with nature, a new
-            outdoor hobby, or simply love the idea of finding your own food,
-            mushroom foraging offers a uniquely rewarding experience.
+            Foraging for mushrooms can be a rewarding experience for many
+            reasons. People may venture off into the woods to forage for
+            mushrooms because it allows them to connect with nature, enjoy the
+            thrill of the hunt, and savor the satisfaction of finding a hidden
+            culinary treasure.
           </p>
-        </aside>
+          <div class="card">
+            <img
+              src="assets/outdoor-exploration.webp"
+              alt="tightly grouped brown mushrooms growing up a tree"
+            />
+            <h3>Outdoor exploration</h3>
+            <p class="summary">
+              Mushroom foraging takes you off the beaten path and into the heart
+              of nature. Learn to read the landscape, identifying prime mushroom
+              habitats from lush forest floors to sun-dappled meadows. Every
+              expedition is a new adventure, with the potential for exciting
+              discoveries around every tree and under every log.
+            </p>
+          </div>
+          <div class="card">
+            <img
+              src="assets/botanical-expertise.webp"
+              alt="variety of mushrooms on a table"
+              class="section-hero"
+            />
+            <h3>Botanical Expertise</h3>
+            <p class="summary">
+              Dive into the intricate world of fungal biology. Discover the
+              unique structures of mushrooms, from caps to gills to spores.
+              Learn to use field guides and identification keys to distinguish
+              between species. With practice, you'll start to see the forest in
+              a whole new light, recognizing the vital role fungi play in
+              ecosystem health.
+            </p>
+          </div>
+          <div class="card">
+            <img
+              src="assets/culinary-delight.webp"
+              alt="plate of food with mushrooms"
+              class="section-hero"
+            />
+            <h3>Culinary Delights</h3>
+            <p class="summary">
+              Transform your foraged finds into delectable dishes. Many edible
+              mushrooms offer unique flavors and textures that can elevate your
+              cooking. From the earthy porcini to the delicate chanterelle, each
+              variety brings its own character to the table. Explore recipes,
+              preservation techniques, and the joy of cooking with nature's
+              bounty.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="wrapper" data-width="narrow">
+        <h2>Start your <span>Foraging Adventure!</span></h2>
+        <p>
+          Whether you're seeking a deeper connection with nature, a new outdoor
+          hobby, or simply love the idea of finding your own food, mushroom
+          foraging offers a uniquely rewarding experience.
+        </p>
       </section>
       <section>
         <!-- two-columns -->
-        <div>
+        <div class="wrapper" data-width="wide">
           <div>
             <img
               src="/assets/get-to-know.webp"
@@ -135,7 +150,7 @@
         </div>
       </section>
       <section>
-        <div>
+        <div class="wrapper" data-width="wide">
           <!-- two-columns -->
           <div>
             <h2>Connect with nature</h2>
