--- a/index.html
+++ b/index.html
@@ -15,25 +15,27 @@
   <body>
     <header class="site-header">
       <div class="wrapper" data-width="wide">
-        <a href="/">
-          <img
-            class="logo"
-            src="/assets/fungi-finders.svg"
-            alt="Fungi Finders"
-          />
-        </a>
-        <nav class="primary-navigation">
-          <ul>
-            <li><a href="/">Discover</a></li>
-            <li><a href="#">Mushroom guide</a></li>
-            <li><a href="#">FAQ</a></li>
-          </ul>
-        </nav>
+        <div class="site-header__inner">
+          <a href="/">
+            <img
+              class="logo"
+              src="/assets/fungi-finders.svg"
+              alt="Fungi Finders"
+            />
+          </a>
+          <nav class="primary-navigation">
+            <ul role="list">
+              <li><a href="/">Discover</a></li>
+              <li><a href="#">Mushroom guide</a></li>
+              <li><a href="#">FAQ</a></li>
+            </ul>
+          </nav>
+        </div>
       </div>
     </header>
 
     <main>
-      <section class="hero">
+      <section class="hero section" data-padding="compact">
         <div class="wrapper">
           <h1>Discover the World of Mushroom Foraging</h1>
         </div>
@@ -54,9 +56,9 @@
           </p>
         </div>
       </section>
-      <section class="main">
+      <section class="main section">
         <div class="wrapper">
-          <h2>The joys of mushroom foraging</h2>
+          <h2 class="section-title">The joys of mushroom foraging</h2>
           <p>
             Foraging for mushrooms can be a rewarding experience for many
             reasons. People may venture off into the woods to forage for
@@ -112,15 +114,17 @@
           </div>
         </div>
       </section>
-      <section class="wrapper" data-width="narrow">
-        <h2>Start your <span>Foraging Adventure!</span></h2>
+      <section class="wrapper section background-accent" data-padding="compact">
+        <h2 class="section-title">
+          Start your <span class="text-brand">Foraging Adventure!</span>
+        </h2>
         <p>
           Whether you're seeking a deeper connection with nature, a new outdoor
           hobby, or simply love the idea of finding your own food, mushroom
           foraging offers a uniquely rewarding experience.
         </p>
       </section>
-      <section>
+      <section class="section background-extra-dark">
         <!-- two-columns -->
         <div class="wrapper" data-width="wide">
           <div>
@@ -130,7 +134,7 @@
             />
           </div>
           <div>
-            <h2>Get to know your mushrooms</h2>
+            <h2 class="section-title">Get to know your mushrooms</h2>
             <p>
               Successful and safe mushroom foraging begins with a deep
               understanding of the species you'll encounter in the wild - not
@@ -149,11 +153,11 @@
           </div>
         </div>
       </section>
-      <section>
+      <section class="section">
         <div class="wrapper" data-width="wide">
           <!-- two-columns -->
           <div>
-            <h2>Connect with nature</h2>
+            <h2 class="section-title">Connect with nature</h2>
             <p>Experience the beauty</p>
             <a href="#" class="button">
               Learn More
