--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </p>
         </div>
       </section>
-      <section class="main section">
+      <section class="section">
         <div class="wrapper">
           <h2 class="section-title">The joys of mushroom foraging</h2>
           <p>
@@ -66,111 +66,124 @@
             thrill of the hunt, and savor the satisfaction of finding a hidden
             culinary treasure.
           </p>
-          <div class="card">
-            <img
-              src="assets/outdoor-exploration.webp"
-              alt="tightly grouped brown mushrooms growing up a tree"
-            />
-            <h3>Outdoor exploration</h3>
-            <p class="summary">
-              Mushroom foraging takes you off the beaten path and into the heart
-              of nature. Learn to read the landscape, identifying prime mushroom
-              habitats from lush forest floors to sun-dappled meadows. Every
-              expedition is a new adventure, with the potential for exciting
-              discoveries around every tree and under every log.
-            </p>
-          </div>
-          <div class="card">
-            <img
-              src="assets/botanical-expertise.webp"
-              alt="variety of mushrooms on a table"
-              class="section-hero"
-            />
-            <h3>Botanical Expertise</h3>
-            <p class="summary">
-              Dive into the intricate world of fungal biology. Discover the
-              unique structures of mushrooms, from caps to gills to spores.
-              Learn to use field guides and identification keys to distinguish
-              between species. With practice, you'll start to see the forest in
-              a whole new light, recognizing the vital role fungi play in
-              ecosystem health.
-            </p>
-          </div>
-          <div class="card">
-            <img
-              src="assets/culinary-delight.webp"
-              alt="plate of food with mushrooms"
-              class="section-hero"
-            />
-            <h3>Culinary Delights</h3>
-            <p class="summary">
-              Transform your foraged finds into delectable dishes. Many edible
-              mushrooms offer unique flavors and textures that can elevate your
-              cooking. From the earthy porcini to the delicate chanterelle, each
-              variety brings its own character to the table. Explore recipes,
-              preservation techniques, and the joy of cooking with nature's
-              bounty.
-            </p>
+          <!-- three columns -->
+          <div class="equal-columns">
+            <div class="card">
+              <img
+                src="assets/outdoor-exploration.webp"
+                alt="tightly grouped brown mushrooms growing up a tree"
+              />
+              <h3>Outdoor exploration</h3>
+              <p class="summary">
+                Mushroom foraging takes you off the beaten path and into the
+                heart of nature. Learn to read the landscape, identifying prime
+                mushroom habitats from lush forest floors to sun-dappled
+                meadows. Every expedition is a new adventure, with the potential
+                for exciting discoveries around every tree and under every log.
+              </p>
+            </div>
+            <div class="card">
+              <img
+                src="assets/botanical-expertise.webp"
+                alt="variety of mushrooms on a table"
+                class="section-hero"
+              />
+              <h3>Botanical Expertise</h3>
+              <p class="summary">
+                Dive into the intricate world of fungal biology. Discover the
+                unique structures of mushrooms, from caps to gills to spores.
+                Learn to use field guides and identification keys to distinguish
+                between species. With practice, you'll start to see the forest
+                in a whole new light, recognizing the vital role fungi play in
+                ecosystem health.
+              </p>
+            </div>
+            <div class="card">
+              <img
+                src="assets/culinary-delight.webp"
+                alt="plate of food with mushrooms"
+                class="section-hero"
+              />
+              <h3>Culinary Delights</h3>
+              <p class="summary">
+                Transform your foraged finds into delectable dishes. Many edible
+                mushrooms offer unique flavors and textures that can elevate
+                your cooking. From the earthy porcini to the delicate
+                chanterelle, each variety brings its own character to the table.
+                Explore recipes, preservation techniques, and the joy of cooking
+                with nature's bounty.
+              </p>
+            </div>
           </div>
         </div>
       </section>
-      <section class="wrapper section background-accent" data-padding="compact">
-        <h2 class="section-title">
-          Start your <span class="text-brand">Foraging Adventure!</span>
-        </h2>
-        <p>
-          Whether you're seeking a deeper connection with nature, a new outdoor
-          hobby, or simply love the idea of finding your own food, mushroom
-          foraging offers a uniquely rewarding experience.
-        </p>
+
+      <section class="section background-accent" data-padding="compact">
+        <div class="wrapper" data-width="narrow">
+          <h2 class="section-title">
+            Start your <span class="text-brand">Foraging Adventure!</span>
+          </h2>
+          <p>
+            Whether you're seeking a deeper connection with nature, a new
+            outdoor hobby, or simply love the idea of finding your own food,
+            mushroom foraging offers a uniquely rewarding experience.
+          </p>
+        </div>
       </section>
       <section class="section background-extra-dark">
         <!-- two-columns -->
         <div class="wrapper" data-width="wide">
-          <div>
-            <img
-              src="/assets/get-to-know.webp"
-              alt="man foraging for mushrooms in a forest"
-            />
-          </div>
-          <div>
-            <h2 class="section-title">Get to know your mushrooms</h2>
-            <p>
-              Successful and safe mushroom foraging begins with a deep
-              understanding of the species you'll encounter in the wild - not
-              just what the edible ones look like, but their toxic look-alikes,
-              seasonal patterns, and preferred habitats.
-            </p>
-            <p>
-              It can feel like a big task, but we’ve got a handy reference guide
-              to help you out!
-            </p>
-            <a href="#" class="button">
-              <span class="visually-hidden"
-                >Learn more about mushrooms using our handy</span
-              >Reference Guide
-            </a>
+          <div class="equal-columns" data-gap="large" data-alignment="centered">
+            <div>
+              <img
+                src="/assets/get-to-know.webp"
+                alt="man foraging for mushrooms in a forest"
+              />
+            </div>
+            <div>
+              <h2 class="section-title">Get to know your mushrooms</h2>
+              <p>
+                Successful and safe mushroom foraging begins with a deep
+                understanding of the species you'll encounter in the wild - not
+                just what the edible ones look like, but their toxic
+                look-alikes, seasonal patterns, and preferred habitats.
+              </p>
+              <p>
+                It can feel like a big task, but we’ve got a handy reference
+                guide to help you out!
+              </p>
+              <a href="#" class="button">
+                <span class="visually-hidden"
+                  >Learn more about mushrooms using our handy</span
+                >Reference Guide
+              </a>
+            </div>
           </div>
         </div>
       </section>
       <section class="section">
         <div class="wrapper" data-width="wide">
           <!-- two-columns -->
-          <div>
-            <h2 class="section-title">Connect with nature</h2>
-            <p>Experience the beauty</p>
-            <a href="#" class="button">
-              Learn More
-              <span class="visually-hidden">
-                about mushrooms with our helpful reference guide
-              </span>
-            </a>
-          </div>
-          <div>
-            <img
-              src="/assets/nature.webp"
-              alt="small white mushroom on a mossy fround"
-            />
+          <div class="equal-columns" data-gap="large" data-alignment="centered">
+            <div>
+              <h2 class="section-title">Connect with nature</h2>
+              <p>
+                Experience the beauty of the great outdoors while foraging for
+                mushrooms with fellow enthusiasts.
+              </p>
+              <a href="#" class="button">
+                Learn More
+                <span class="visually-hidden">
+                  about mushrooms with our helpful reference guide
+                </span>
+              </a>
+            </div>
+            <div>
+              <img
+                src="/assets/nature.webp"
+                alt="small white mushroom on a mossy fround"
+              />
+            </div>
           </div>
         </div>
       </section>
