Finished home page with styling using components for the button, footer and cards

--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
     </header>
 
     <main>
-      <section class="hero section" data-padding="compact">
+      <section class="hero flow section" data-padding="compact">
         <div class="wrapper">
-          <h1>Discover the World of Mushroom Foraging</h1>
+          <h1 class="hero__title">
+            Discover the World of <span>Mushroom Foraging</span>
+          </h1>
         </div>
         <div class="wrapper" data-width="narrow">
           <p>
@@ -57,7 +59,7 @@
         </div>
       </section>
       <section class="section">
-        <div class="wrapper">
+        <div class="wrapper flow">
           <h2 class="section-title">The joys of mushroom foraging</h2>
           <p>
             Foraging for mushrooms can be a rewarding experience for many
@@ -73,7 +75,7 @@
                 src="assets/outdoor-exploration.webp"
                 alt="tightly grouped brown mushrooms growing up a tree"
               />
-              <h3>Outdoor exploration</h3>
+              <h3 class="card__title">Outdoor exploration</h3>
               <p class="summary">
                 Mushroom foraging takes you off the beaten path and into the
                 heart of nature. Learn to read the landscape, identifying prime
@@ -88,7 +90,7 @@
                 alt="variety of mushrooms on a table"
                 class="section-hero"
               />
-              <h3>Botanical Expertise</h3>
+              <h3 class="card__title">Botanical Expertise</h3>
               <p class="summary">
                 Dive into the intricate world of fungal biology. Discover the
                 unique structures of mushrooms, from caps to gills to spores.
@@ -104,7 +106,7 @@
                 alt="plate of food with mushrooms"
                 class="section-hero"
               />
-              <h3>Culinary Delights</h3>
+              <h3 class="card__title">Culinary Delights</h3>
               <p class="summary">
                 Transform your foraged finds into delectable dishes. Many edible
                 mushrooms offer unique flavors and textures that can elevate
@@ -118,8 +120,12 @@
         </div>
       </section>
 
-      <section class="section background-accent" data-padding="compact">
+      <section
+        class="section background-accent text-center"
+        data-padding="compact"
+      >
         <div class="wrapper" data-width="narrow">
+          <div class="flow font-size-lg text-high-contrast"></div>
           <h2 class="section-title">
             Start your <span class="text-brand">Foraging Adventure!</span>
           </h2>
@@ -140,7 +146,7 @@
                 alt="man foraging for mushrooms in a forest"
               />
             </div>
-            <div>
+            <div class="flow font-size-lg">
               <h2 class="section-title">Get to know your mushrooms</h2>
               <p>
                 Successful and safe mushroom foraging begins with a deep
@@ -165,7 +171,7 @@
         <div class="wrapper" data-width="wide">
           <!-- two-columns -->
           <div class="equal-columns" data-gap="large" data-alignment="centered">
-            <div>
+            <div class="flow font-size-lg">
               <h2 class="section-title">Connect with nature</h2>
               <p>
                 Experience the beauty of the great outdoors while foraging for
@@ -189,7 +195,7 @@
       </section>
     </main>
     <footer class="site-footer">
-      <h4>Happy Foraging</h4>
+      <p class="site-footer__title">Happy Foraging!</p>
       <a href="mailto:contact@fungifinders.com">contact@fungifinders.com</a>
     </footer>
   </body>
