--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="/main.js" defer></script>
   </head>
   <body>
-    <a class="skip-to-main" href="/main.js">Skip to main content</a>
+    <a class="skip-to-main" href="#main">Skip to main content</a>
     <header class="site-header">
       <div class="wrapper" data-width="wide">
         <div class="site-header__inner">
@@ -40,7 +40,7 @@
       </div>
     </header>
 
-    <main>
+    <main id="main">
       <section class="hero flow section" data-padding="compact">
         <div class="wrapper">
           <h1 class="hero__title">
