--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
           <nav id="primary-nav" class="primary-navigation">
             <ul role="list">
               <li><a href="/">Discover</a></li>
-              <li><a href="#">Mushroom guide</a></li>
+              <li><a href="/mushroom-guide.html">Mushroom guide</a></li>
               <li><a href="#">FAQ</a></li>
             </ul>
           </nav>
         </div>
-      </div>
+      </div>q
     </header>
 
     <main id="main">
