Style the mushroom cards

--- a/mushroom-guide.html
+++ b/mushroom-guide.html
@@ -95,7 +95,7 @@
       </section>
 
       <!-- get to know your mushrooms -->
-      <section class="section">
+      <section class="mushroom-guide section">
         <div class="wrapper">
           <h2 class="section-title">Get to know your mushrooms</h2>
           <select>
@@ -110,7 +110,7 @@
             <option value="Toxic">Type: Toxic</option>
           </select>
           <!-- grid of mushrooms -->
-          <div id="mushrooms-grid">
+          <div id="mushrooms-grid" class="grid-auto-fit">
             <div class="card">
               <h3 class="card__title">Chanterelle</h3>
               <ul role="list" aria-label="Mushroom characteristics">
