--- a/mushroom-guide.html
+++ b/mushroom-guide.html
@@ -97,38 +97,42 @@
       <!-- get to know your mushrooms -->
       <section class="mushroom-guide section">
         <div class="wrapper">
-          <h2 class="section-title">Get to know your mushrooms</h2>
-          <select>
-            <option value="all">Season: All</option>
-            <option value="spring">Season: Spring</option>
-            <option value="summer">Season: Spring</option>
-            <option value="fall">Season: Spring</option>
-          </select>
-          <select>
-            <option value="all">Type: All</option>
-            <option value="edible">Type: Edible</option>
-            <option value="Toxic">Type: Toxic</option>
-          </select>
-          <!-- grid of mushrooms -->
-          <div id="mushrooms-grid" class="grid-auto-fit">
-            <div class="card">
-              <h3 class="card__title">Chanterelle</h3>
-              <ul role="list" aria-label="Mushroom characteristics">
-                <li data-edible="edible">
-                  <span class="visually-hidden">This mushroom is</span>
-                  Edible
-                </li>
-                <li data-season="summer">
-                  <span class="visually-hidden">
-                    Best season to harvest this mushroom is
-                  </span>
-                  summer
-                </li>
-              </ul>
-              <p>Golden-yellow, funnel-shaped mushroom with false gills</p>
-              <div class="card__note">
-                <strong>Important notes: </strong>Has toxic look-alikes - learn
-                proper identification
+          <div class="flow">
+            <h2 class="section-title">Get to know your mushrooms</h2>
+            <div class="flex-group">
+              <select>
+                <option value="all">Season: All</option>
+                <option value="spring">Season: Spring</option>
+                <option value="summer">Season: Spring</option>
+                <option value="fall">Season: Spring</option>
+              </select>
+              <select>
+                <option value="all">Type: All</option>
+                <option value="edible">Type: Edible</option>
+                <option value="Toxic">Type: Toxic</option>
+              </select>
+            </div>
+            <!-- grid of mushrooms -->
+            <div id="mushrooms-grid" class="grid-auto-fit">
+              <div class="card">
+                <h3 class="card__title">Chanterelle</h3>
+                <ul role="list" aria-label="Mushroom characteristics">
+                  <li data-edible="edible">
+                    <span class="visually-hidden">This mushroom is</span>
+                    Edible
+                  </li>
+                  <li data-season="summer">
+                    <span class="visually-hidden">
+                      Best season to harvest this mushroom is
+                    </span>
+                    summer
+                  </li>
+                </ul>
+                <p>Golden-yellow, funnel-shaped mushroom with false gills</p>
+                <div class="card__note">
+                  <strong>Important notes: </strong>Has toxic look-alikes - learn
+                  proper identification
+                </div>
               </div>
             </div>
           </div>
