Fix styling and update filter type to edible

--- a/mushroom-guide.html
+++ b/mushroom-guide.html
@@ -100,13 +100,13 @@
           <div class="flow">
             <h2 class="section-title">Get to know your mushrooms</h2>
             <div class="flex-group">
-              <select>
+              <select name="season" id="season">
                 <option value="all">Season: All</option>
                 <option value="spring">Season: Spring</option>
-                <option value="summer">Season: Spring</option>
-                <option value="fall">Season: Spring</option>
+                <option value="summer">Season: Summer</option>
+                <option value="fall">Season: Fall</option>
               </select>
-              <select>
+              <select name="edible" id="edible">
                 <option value="all">Type: All</option>
                 <option value="edible">Type: Edible</option>
                 <option value="Toxic">Type: Toxic</option>
