--- a/mushroom-guide.html
+++ b/mushroom-guide.html
@@ -101,7 +101,10 @@
             <h2 class="section-title">Get to know your mushrooms</h2>
             <div class="flex-group">
               <select name="season" id="season">
-                <option value="all">Season: All</option>
+                <div class="option">
+                  <option value="all">Season: All</option>
+                </div>
+
                 <option value="spring">Season: Spring</option>
                 <option value="summer">Season: Summer</option>
                 <option value="fall">Season: Fall</option>
@@ -130,8 +133,8 @@
                 </ul>
                 <p>Golden-yellow, funnel-shaped mushroom with false gills</p>
                 <div class="card__note">
-                  <strong>Important notes: </strong>Has toxic look-alikes - learn
-                  proper identification
+                  <strong>Important notes: </strong>Has toxic look-alikes -
+                  learn proper identification
                 </div>
               </div>
             </div>
@@ -140,74 +143,72 @@
       </section>
 
       <!-- faq -->
-      <section class="section background-extra-dark">
-        <div class="wrapper" data-width="wide">
+      <section class="section background-extra-dark" data-padding="compact">
+        <div class="wrapper flow" data-width="wide">
           <h2 class="section-title">Frequently Asked Questions</h2>
-          <div class="card">
-            <img
-              src="/assets/start-foraging.webp"
-              alt="a basketful of a variety of mushrooms"
-            />
-            <h3 class="card__title background-accent text-high-contrast">
-              What do I need to start mushroom foraging?
-            </h3>
-            <p>
-              You'll need a local field guide, a sharp knife or scissors, a
-              basket or mesh bag for collecting, and paper bags for separating
-              specimens. Bring a small brush for cleaning, wear sturdy boots,
-              and carry a GPS device or compass to track your location. A camera
-              is also helpful to document your finds.
-            </p>
-          </div>
-          <div class="card">
-            <img
-              src="/assets/identify-mushrooms.webp"
-              alt="a mushroom on top of a book showing information about the mushroom"
-            />
-            <h3 class="card__title background-accent text-high-contrast">
-              How can I identify edible mushrooms?
-            </h3>
-            <p>
-              Learn from experienced foragers and reliable guidebooks – never
-              rely on apps alone. Study each mushroom's specific features like
-              cap shape, gill structure, stem characteristics, and spore prints.
-              Start with easily identifiable species that have no poisonous
-              lookalikes, and never eat anything unless you're completely
-              certain of its identification.
-            </p>
-          </div>
-          <div class="card">
-            <img
-              src="/assets/where-to-find.webp"
-              alt="a red capped mushroom poking out of a pile of leaves"
-            />
-            <h3 class="card__title background-accent text-high-contrast">
-              Where can I find foraging spots?
-            </h3>
-            <p>
-              Look in deciduous forests, especially near oak and maple trees,
-              and in damp, shaded areas. Fallen logs and dead trees are often
-              productive spots. Only forage on public lands where it's allowed,
-              and always check local regulations. Remember to get permission for
-              private property and keep your best locations private to prevent
-              over-harvesting.
-            </p>
-          </div>
-          <div class="card">
-            <img
-              src="/assets/best-seasons.webp"
-              alt="a red capped mushroom with white spots growing out of a forest covered in autumn coloured leaves"
-            />
-            <h3 class="card__title background-accent text-high-contrast">
-              What are the best seasons for mushroom foraging?
-            </h3>
-            <p>
-              Spring is ideal for morels, late summer brings chanterelles and
-              boletes, and fall is peak season for most mushrooms including
-              oysters and hen of the woods. Some species can even be found in
-              winter, especially in milder climates. Each season offers
-              different varieties, so year-round foraging is possible.
-            </p>
+          <div class="faq-bento">
+            <div class="card">
+              <img
+                src="/assets/start-foraging.webp"
+                alt="a basketful of a variety of mushrooms"
+              />
+              <h3 class="card__title">
+                What do I need to start mushroom foraging?
+              </h3>
+              <p>
+                You'll need a local field guide, a sharp knife or scissors, a
+                basket or mesh bag for collecting, and paper bags for separating
+                specimens. Bring a small brush for cleaning, wear sturdy boots,
+                and carry a GPS device or compass to track your location. A
+                camera is also helpful to document your finds.
+              </p>
+            </div>
+            <div class="card">
+              <img
+                src="/assets/identify-mushrooms.webp"
+                alt="a mushroom on top of a book showing information about the mushroom"
+              />
+              <h3 class="card__title">How can I identify edible mushrooms?</h3>
+              <p>
+                Learn from experienced foragers and reliable guidebooks – never
+                rely on apps alone. Study each mushroom's specific features like
+                cap shape, gill structure, stem characteristics, and spore
+                prints. Start with easily identifiable species that have no
+                poisonous lookalikes, and never eat anything unless you're
+                completely certain of its identification.
+              </p>
+            </div>
+            <div class="card">
+              <img
+                src="/assets/where-to-find.webp"
+                alt="a red capped mushroom poking out of a pile of leaves"
+              />
+              <h3 class="card__title">Where can I find foraging spots?</h3>
+              <p>
+                Look in deciduous forests, especially near oak and maple trees,
+                and in damp, shaded areas. Fallen logs and dead trees are often
+                productive spots. Only forage on public lands where it's
+                allowed, and always check local regulations. Remember to get
+                permission for private property and keep your best locations
+                private to prevent over-harvesting.
+              </p>
+            </div>
+            <div class="card">
+              <img
+                src="/assets/best-seasons.webp"
+                alt="a red capped mushroom with white spots growing out of a forest covered in autumn coloured leaves"
+              />
+              <h3 class="card__title text-high-contrast">
+                What are the best seasons for mushroom foraging?
+              </h3>
+              <p>
+                Spring is ideal for morels, late summer brings chanterelles and
+                boletes, and fall is peak season for most mushrooms including
+                oysters and hen of the woods. Some species can even be found in
+                winter, especially in milder climates. Each season offers
+                different varieties, so year-round foraging is possible.
+              </p>
+            </div>
           </div>
         </div>
       </section>
