Update navigation with smooth scrolling for navigating to the anchored faq section

--- a/mushroom-guide.html
+++ b/mushroom-guide.html
@@ -34,7 +34,7 @@
             <ul role="list">
               <li><a href="/">Discover</a></li>
               <li><a href="/mushroom-guide.html">Mushroom guide</a></li>
-              <li><a href="#">FAQ</a></li>
+              <li><a href="/mushroom-guide.html#faq">FAQ</a></li>
             </ul>
           </nav>
         </div>
@@ -143,7 +143,11 @@
       </section>
 
       <!-- faq -->
-      <section class="section background-extra-dark" data-padding="compact">
+      <section
+        id="faq"
+        class="section background-extra-dark"
+        data-padding="compact"
+      >
         <div class="wrapper flow" data-width="wide">
           <h2 class="section-title">Frequently Asked Questions</h2>
           <div class="faq-bento">
