Hide the filters if js is not enabled

--- a/mushroom-guide.html
+++ b/mushroom-guide.html
@@ -101,7 +101,7 @@
           <div class="flow">
             <h2 class="section-title">Get to know your mushrooms</h2>
             <div class="flex-group">
-              <select name="season" id="season">
+              <select name="season" id="season" hidden>
                 <div class="option">
                   <option value="all">Season: All</option>
                 </div>
@@ -110,7 +110,7 @@
                 <option value="summer">Season: Summer</option>
                 <option value="fall">Season: Fall</option>
               </select>
-              <select name="edible" id="edible">
+              <select name="edible" id="edible" hidden>
                 <option value="all">Type: All</option>
                 <option value="edible">Type: Edible</option>
                 <option value="toxic">Type: Toxic</option>
